Add base documentation